Fixed image alignment

--- a/_sass/slate/_base.scss
+++ b/_sass/slate/_base.scss
@@ -55,8 +55,7 @@ ul.posts li {
     list-style: none;
 }
 
-.center-image
-{
+img[src*="#center"] {
     margin: 0 auto;
     display: block;
 }
